Se agrego fuente, color y texto..

--- a/index.html
+++ b/index.html
@@ -3,40 +3,45 @@
 <head>
 	<meta charset=utf-8>
 	<meta name=viewport content="width=device-width, initial-scale=1">
+	<link href='https://fonts.googleapis.com/css?family=Play' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Taviraj" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<title>Organisaciones</title>
 </head>
-<body>
-	<div class="text-center">
-		<h1>Por que viajamos</h1>
+<body class="play">
+	<nav>
+		<ul class="fondo-menu-color text-center ">				
+			<li class="col-md-2 aliniar-vertical sin-float"><a href="" class="gris-claro openSans tamno-fuente">Por que viajamos</a></li>
+			<li class="col-md-2 aliniar-vertical sin-float"><a href="" class="gris-claro openSans tamno-fuente">Ventajas y desventajas</a></li>
+			<li class="col-md-2 aliniar-vertical sin-float"><a href="" class="gris-claro openSans tamno-fuente">Las organizaciones</a></li>
+			<li class="col-md-2 aliniar-vertical sin-float"><a href="" class="gris-claro openSans tamno-fuente">Clacificacion de las organizacioines</a></li>
+			<li class="col-md-2 aliniar-vertical sin-float"><a href="" class="gris-claro openSans tamno-fuente">Oraganisaciones internacionales y de desarrollo</a></li>
+			<li class="col-md-2 aliniar-vertical sin-float"><a href="" class="gris-claro openSans tamno-fuente">La Omt</a></li>
+		</ul>
+	</nav>
+	<div class="text-center seleste">
+		<h1>Por haa que viajamos</h1>
 		<h2>El turismo no es una industria sino todas las industrias.</h2>
 		<h3>Motivos por los que viajamos.</h3>
-		
 	</div>
-	<div>
-		<ul>
-			<li>Aventura</li>
-			<li>Descarso</li>
-			<li>Placer</li>
-			<li>Buscar alimentos </li>
-			<li>Comercio</li>
-			<li>Olinpiada</li>
-			<li>Adoracion</li>
-			<li>Adoracion de los dioses</li>
-			<li>Conquista</li>
-		</ul>
-		
-	</div>
-	<nav>
-		<ul class="text-center">
-			<li class="col-md-1 aliniar-vertical sin-float"><a href="">Por que viajamos</a></li>
-			<li class="col-md-1 aliniar-vertical sin-float"><a href="">Ventajas y desventajas</a></li>
-			<li class="col-md-1 aliniar-vertical sin-float"><a href="">Las organizaciones</a></li>
-			<li class="col-md-1 aliniar-vertical sin-float"><a href="">Clacificacion de las organizacioines</a></li>
-			<li class="col-md-1 aliniar-vertical sin-float"><a href="">Oraganisaciones internacionales y de desarrollo</a></li>
-			<li class="col-md-1 aliniar-vertical sin-float"><a href="">La Omt</a></li>
-		</ul>
-	</nav>	
+	<section>
+		<div>
+			<ul class="tamno-fuente2 espacio-los-lados2 space-top">
+				<li >Aventura</li>
+				<li>Descarso</li>
+				<li>Placer</li>
+				<li>Buscar alimentos </li>
+				<li>Comercio</li>
+				<li>Olinpiada</li>
+				<li>Adoracion</li>
+				<li>Adoracion de los dioses</li>
+				<li>Conquista</li>
+			</ul>
+		</div>
+	</section>
 </body>
 </html>		
+			
+		
